syntax = "proto3";

package com.tmk.grpckt;

option java_multiple_files = true;
option java_package = "com.itau.authorizer.authorization.application.model.grpc";
option java_outer_classname = "CurrentBalanceRequestProto";

message CurrentBalanceRequest {
  string accountId = 1;
}
